--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<sonar.host.url>http://13.232.167.80:9000/</sonar.host.url>
 	<!--	<sonar.login>17543288108f15e85bae3ce39fb984f90ac6a810</sonar.login>  -->
 		<sonar.login>admin</sonar.login>
-		<sonar.password>admin</sonar.password>
+		<sonar.password>Rteja874@</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
